--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -702,7 +702,7 @@ post:
 
     # 开启后，只有在文章 Front-matter 里指定 `math: true` 才会在文章页启动公式转换，以便在页面不包含公式时提高加载速度
     # If true, only set `math: true` in Front-matter will enable math, to load faster when the page does not contain math
-    specific: true
+    specific: false
 
     # Options: mathjax | katex
     engine: mathjax
