修改主页标题

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Starmin的个人杂记
+title: Starmin的随笔
 subtitle: ''
-description: 'Starmin的个人杂记'
+description: 'Starmin的随笔'
 keywords:
 author: Starmin
 language: zh-CN
